13-12-2013 5.0.28
- Auto loader improved
- Changed projects2 layout and improved navigation
- Employees can submit new holiday entries and their manager can approve them
- Added "Add holiday" button to timeregistration2 tab too.

11-12-2013 5.0.27
- Prevent new task list on ios from crashing activesync. All tasks will be 
  synced to all lists. Not elegant but it seems to be the only way to prevent 
  a crash.
- Calendar printing: removed start time for the 2nd printed instance of events 
  that take longer than 1 day
- Calendar module: Added print option for event count per category per calendar.
- Fixed exception dates import from CalDAV
- Added new create link dialog for the HTML editor in the site module
- Autolink a contact will check if the same contact is not already selected in 
  the link field
- Hard-deleting a user works again in the Users module
- Removed some calendar event data from response when event is private.
- Copy resources with event too

29-11-2013 5.0.26
- Check if meeting request has relevant updates before reimporting it when 
  accepting in the mail
- Delete folder bug
- User group filter showed wrong total count
- User delete impossible.
- Changing project type didn't work on projects v2
- Fixed problem with exception events that are not removed when the main event 
  is removed.
- Fixed bug with recurring events that are moved after creating an exception in
  it. Sometimes it happened that the recurrence was not correct after that.
  That's fixed now.

27-11-2013 5.0.25
- Change ACL level always allowed for admins
- User add error when max_users was set in config.php
- Tickets: CC input field for ticket notifications: sanity check when submitting 
  CC addresses.
- Files: Prohibited: compress folder that is inside a read-only folder.
- Address book: Extra check if uploaded photo exceeds the server's limit.
- Added more information to number and contact field in the schedule-call dialog.